# mcp-config-lint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_check_request.md
.github/workflows/: ci.yml  example.yml
src/mcp_lint/: __init__.py  checks.py  cli.py  data.py
tests/: test_checks.py
