[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-lint"
version = "0.1.0"
description = "Validate and security-check claude_desktop_config.json — CI-friendly CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Basil Alshukaili", email = "basilalshukaili@gmail.com" }]
keywords = ["mcp", "claude", "ai", "lint", "security", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/basilalshukaili/mcp-lint"
Repository = "https://github.com/basilalshukaili/mcp-lint"
"Bug Tracker" = "https://github.com/basilalshukaili/mcp-lint/issues"

[project.scripts]
mcp-lint = "mcp_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_lint"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
